--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@layer components {
+  /* page padding */
+  .page-padding {
+    @apply px-6;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  /*covid table*/
+  .covid-stats {
+    @apply text-center pb-12;
   }
-  to {
-    transform: rotate(360deg);
+
+  .covid-stats-date {
+    @apply absolute bottom-0 right-10;
+  }
+
+  /* Sign page
+  ====================== */
+  /* input */
+  .input {
+    @apply rounded text-primary-dark bg-secondary-dark my-3 p-2 w-full focus:outline focus:border-primary-dark;
+  }
+
+  /* show password icons */
+  .show-password-icon {
+    @apply absolute bottom-6 right-5 text-primary-dark text-lg cursor-pointer;
   }
 }
