added localstorage and fixes:
- fixed adding articles to read later
- fixed auth errors
- added loading skeletons
- added snackbar messagges
- added article filter chips component

--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,10 @@
   }
 
   /* Sign page
-    ====================== */
+      ====================== */
   /* input */
   .input {
-    @apply rounded text-primary-dark bg-secondary-dark my-3 p-2 w-full focus:outline focus:border-primary-dark;
+    @apply rounded-full text-primary-dark bg-secondary-dark my-3 p-2 w-full focus:outline focus:border-primary-dark;
   }
 
   /* show password icons */
