--- a/src/pages/home/NewsSlider/Slider.css
+++ b/src/pages/home/NewsSlider/Slider.css
@@ -1,4 +1,10 @@
 /* bullets */
 #home-slider ul {
-  padding-left: 2rem;
+  padding-left: 0.75rem;
+}
+
+@media only screen and (min-width: 1024px) {
+  #home-slider ul {
+    padding-left: 2rem;
+  }
 }
