--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   }
 
   .covid-stats-date {
-    @apply absolute bottom-0 right-10;
+    @apply absolute bottom-0 right-10 w-52;
   }
 
   /* Sign page
